--- a/ProjektRapport/sektioner/NotFunc.tex
+++ b/ProjektRapport/sektioner/NotFunc.tex
@@ -5,7 +5,7 @@
 I dette afsnit beskrives de ikke funktionelle krav. Der findes ikke funktionelle krav til trintransformeren, målingerne og kommunikation. Disse beskrives hver især i følgende afsnit.
 
 \subsubsection{Trintransformer}
-Der er valgt en trintransformer, som simulering af belastning skal laves ud fra. Den valgte trintransformer har følgende specifikationer. Det er dog besluttet ikke at lave større strømforbrug i systemet end 500mA. 
+Der er valgt en trintransformer, som simulering af belastning skal laves ud fra. Den valgte trintransformer har ne specifikationer24V/0-8V 5A. Det er dog besluttet ikke at lave større strømforbrug i systemet end 500mA. 
 
 \begin{enumerate}
 	\item Maks belastning af transformer er 20VA
@@ -15,7 +15,7 @@ Der er valgt en trintransformer, som simulering af belastning skal laves ud fra.
 \end{enumerate}
 
 \subsubsection{Måleenhed}
-Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præcision. Dette er der bestemte standarder til, men da gruppen ikke har modtager undervisning i emnet og projektet er proof of concept. Er det besluttet at måleenheden skal kunne måle indenfor en bestemt procent af det rigtige værdi og ikke gå længere ned i nøjagtigheds begreberne.
+Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præcision. Dette er der bestemte standarder til, men da gruppen ikke har modtager undervisning i emnet og projektet er proof of concept, er det besluttet at måleenheden skal kunne måle indenfor en bestemt procent af det rigtige værdi og ikke gå længere ned i nøjagtigheds begreberne.
 
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms
@@ -27,7 +27,7 @@ Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præci
 \end{enumerate} 
 
 \subsubsection{Kommunikation}
-For at sikre at der udvikles en pålidelig kommunikation, stilles der krav til at der i de fleste tilfælde ikke må ske fejl, men da det igen er "proof of concept" er det valgt ikke at have fejlhåndtering, hvis der skulle ske fejl i en forsendelse.
+For at sikre at der udvikles en pålidelig kommunikation, stilles der krav til at der i de fleste tilfælde ikke må ske fejl, men da det igen er proof of concept er det valgt ikke at have fejlhåndtering, hvis der skulle ske fejl i en forsendelse.
 
 \begin{enumerate}
 	\item Forsinkelsen på brugergrænsefladen ifht. ændringer i målte værdier må ikke overstige 2,5 sekund. 
