--- a/ProjektRapport/sektioner/forside.tex
+++ b/ProjektRapport/sektioner/forside.tex
@@ -4,7 +4,7 @@
 	{\centering
 	{\scshape\LARGE Aarhus Universitet \par}
 	\vspace{1cm}
-	{\scshape\Large 4. semesterprojekt gruppe 1\par}
+	{\scshape\Large 4. semesterprojekt gruppe1\par}
 	{\scshape\Large Projekt rapport\par}
 	\vspace{1.5cm}
 	{\huge\bfseries Spændingsregulator\par}
@@ -17,7 +17,7 @@
 	201508333 - Søren Jensen\\
 	13114 - Jeppe Hansen\\   }
 	\vfill
-	vejleder\par
+	Vejleder\par
 	Emir Pasic
 
 	\vfill
