Rettelse mere eller mindre over det hele

--- a/ProjektRapport/sektioner/Arkitektur/Indledning.tex
+++ b/ProjektRapport/sektioner/Arkitektur/Indledning.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-I arkitekturen bliver produktet, der kan løse problemformuleringen udformet. I kravspecifikationen er det blevet gjort klart hvilke krav der er til systemet. Ud fra kravene er et blok defintionsdiagram og to interne blokdiagrammer blevet lavet, som viser blokkene og deres interne forbindelse i den overordnede løsning.
+I arkitekturen bliver produktet, der kan løse problemformuleringen udformet. I kravspecifikationen er det blevet gjort klart hvilke krav der er til systemet. Ud fra kravene er et blok defintionsdiagram og to interne blokdiagrammer blevet lavet, som viser blokkene og deres interne forbindelser i den overordnede løsning.
 
 Et allokeringsdiagram er med til at underbygge forståelsen for hvordan disse blokke bliver realiseret softwaremæssigt og hvilke enheder der vil være omdrejningspunkt for hver blok.
 
