--- a/ProjektRapport/sektioner/Maaleenhed/SoftwareJeppe.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/SoftwareJeppe.tex
@@ -3,4 +3,4 @@
 
 \subsubsection{Fourier}
 
-Til beregning af Fourier på de samplede signaler er der fundet en funktion på et Cypress forum\cite{FFTalgo}. Dette er en FFT funktion, der har den fordel at være meget hurtigere end den normale DFT. Tilgengæld skal antalet af samples gå op i $2^{x}$. Det er valgt at anvende denne funktion, da den er udviklet til PSOC creator og kan derfor nemt anvendes i projektet, og det har ikke været et problem at tilpasse antal samples til at gå op i $2^{x}$. Yderligere information om implementering af Fourier kan findes i dokumentationen\footnote{Projektdokumentation, 9.2.3, Fourier Algoritme}. 
+Til beregning af Fourier på de samplede signaler er der fundet en funktion på et Cypress forum\cite{FFTalgo}. Dette er en FFT funktion, der har den fordel at være meget hurtigere end den normale DFT. Tilgengæld skal antallet af samples gå op i $2^{x}$. Det er valgt at anvende denne funktion, da den er udviklet til PSoC creator og kan derfor nemt anvendes i projektet, og det har ikke været et problem at tilpasse antal samples til at gå op i $2^{x}$. Yderligere information om implementering af Fourier kan findes i dokumentationen\footnote{Projektdokumentation, 9.2.3, Fourier Algoritme}. 
