--- a/ProjektRapport/sektioner/MetodeOgProcess.tex
+++ b/ProjektRapport/sektioner/MetodeOgProcess.tex
@@ -30,7 +30,7 @@ Holdinddelingen og ansvarsområder ses i Tabel \ref{tab:arbejdsfordeling}.
 		\multirow{2}{*}{1} & Jeppe Hansen            & \multirow{2}{*}{Måleenhed}                                     \\
 		& Søren Jensen            &                                                                \\\midrule
 		\multirow{2}{*}{2} & Laurids Jørgensen       & \multirow{2}{*}{Styringsenhed}                                 \\
-		& Denise Sloth            &                                                                \\\midrule
+		& Dennis Slot Larsen            &                                                                \\\midrule
 		\multirow{2}{*}{3} & Caroline Møller Sørensen         & \multirow{2}{*}{Distributionslinje, belastning og Trinskifter} \\
 		& Sophia Amalie Mortensen &                                                                \\ \midrule
 	\end{tabular}
