--- a/ProjektRapport/sektioner/Resultat2.tex
+++ b/ProjektRapport/sektioner/Resultat2.tex
@@ -5,4 +5,4 @@ Den automatiske regulering er udviklet på baggrund af forholdsvis simpel model,
 
 Forbrugerne er dimensioneret efter at kunne lave en maksimal strøm i systemet på 500mA. Dette har dog vist sig ikke at kunne lade sig gøre, da Spændingsregulatoren ikke kan opretholde 4V ved forbrugerne, når alle forbrugere tilkobles. Det blev ikke fundes relevant at implementere en løsning, men kunne have været løst ved at inddrage flere trin på transformeren.
 
-Der er udviklet en prototype, der med stor tilfredshed har kunne simulere en løsning på problemformuleringen. I forhold til accepttesten\footnote{Projektdokumentation, 12, Accepttest} har Spændingsregulatoren bevist, at der kan skiftes trin på transformeren manuelt eller automatisk alt efter hvor stor belastning der er i systemet. Derudover har den vist sig at kunne måle strøm og spænding i det simulerede systemet med høj præcision.
+Der er udviklet en prototype, der med stor tilfredshed har kunnet simulere en løsning på problemformuleringen. I forhold til accepttesten\footnote{Projektdokumentation, 12, Accepttest} har Spændingsregulatoren bevist, at der kan skiftes trin på transformeren manuelt eller automatisk alt efter hvor stor belastning der er i systemet. Derudover har den vist sig at kunne måle strøm og spænding i det simulerede systemet med høj præcision.
