--- a/ProjektRapport/sektioner/Trinskifter.tex
+++ b/ProjektRapport/sektioner/Trinskifter.tex
@@ -7,7 +7,7 @@ Ved projektets start fik gruppen udleveret en trintransformer\footnote{Projektdo
 De forskellige trin og dermed spændingsniveauer på sekundærside af transformeren er bestemt af antallet af tilkoblede viklinger. Det ønskede spændingsniveau hos forbrugeren er valgt til 4V, og det er i systemet muligt at skifte mellem trin 4V, 5V og 6V på trintransformeren. Disse tre trin gør det muligt at holde spændingen hos forbrugeren på $\pm$10$\%$ af 4V, når belastningen varierer.
 
 \subsection{Design og implementering af relækredsløb}
-Til at styre tilkoblingen af trin på transformeren er der designet et relækredsløb. Relæerne er sat til Normally Open og virker som kontakter, der slutter, når relæerne trækker, se bilag B-5. Kontaktrelæerne skal styres af en PLC, og skal derfor kunne holde til et 24VDC styresignal \footnote{Projektdokumentation, 8.4, Trinskifter}. Det færdige print med relæerne ses på figur \ref{fig:Relae}. De sorte bananstik kobles til henholdsvis trin 4V, 5V og 6V på transformeren. Øverst til ses pin, der kobles til Distributionslinjen. De tre pins nederst til venstre er til styresignal fra PLC og den fjerde er stelforbindelse for PLC. 
+Til at styre tilkoblingen af trin på transformeren er der designet et relækredsløb. Relæerne er sat til Normally Open og virker som kontakter, der slutter, når relæerne trækker, se bilag B-5. Kontaktrelæerne skal styres af en PLC, og skal derfor kunne holde til et 24VDC styresignal \footnote{Projektdokumentation, 8.4, Trinskifter}. Det færdige print med relæerne ses på figur \ref{fig:Relae}. De sorte bananstik kobles til henholdsvis trin 4V, 5V og 6V på transformeren. Øverst til højre ses en pin, der kobles til Distributionslinjen. De tre pins nederst til venstre er til styresignal fra PLC og den fjerde er stelforbindelse for PLC. 
 
 \begin{figure}[H]
 	\centering
