--- a/ProjektRapport/sektioner/FremtidigtArbejde/Styringsenhed.tex
+++ b/ProjektRapport/sektioner/FremtidigtArbejde/Styringsenhed.tex
@@ -5,7 +5,7 @@ I forhold til Kommunikationsmodulet i projekt er det desværre tydeligt at se at
 
 Deriblandt kan for eksempel nævnes at som prototypen fungerer er der ingen behandling af forkerte måledata. Dette kunne for eksempel implementeres ved at lave et gennemsnit over flere målinger, hvilket ville gøre uregelmæssige målingers påvirkning på systemet mindre. Helt forkerte data, grundet f.eks. støj på transmissionen kunne fjernes ved at se på hvilket interval realistiske målinger ville ligge i. En log af dataet kunne eventuelt tilføjes prototypen, så man kunne bruge den til at observere hvordan systemet reagerer over en længere periode og derved forbedre af systemet.
 
-Derudover er der i dette projekt benyttet UART mellem Måleenhederne og Kommunikationsmodulet, men der burde i en realiseret Spændingsregulator blive benyttet en anden form for kommunikation, der kan leverer pålidelig data over store afstande. Her ville det være essentielt at koble Måleenhederne på internettet og på den måde sende data til Kommunikationsmodulet.
+Derudover er der i dette projekt benyttet UART mellem Måleenhederne og Kommunikationsmodulet, men der burde i en realiseret Spændingsregulator blive benyttet en anden form for kommunikation, der kan leverer pålidelig data over store afstande. Her ville det være essentielt at koble Måleenhederne og Kommunikationsmodulet på internettet.
 
 Derimod vil det være forholdsvis let at indsætte flere måleenheder både i prototypen, men også i en realiseret Spændingsregulator. Dette skyldes brugen af Kommunikationsmodulet, der samler alle data fra Måleenhederne og sender dem til Kontrolmodulet. Det ville være nødvendigt at ændre lidt i koderne for at tilføje flere enheder, eksempelvis protokollen imellem Kontrolmodul og Kommunikationsmodulet skal udbygges således der bliver efterspurgt data fra flere enheder.
 
