Test program reference

--- a/ProjektRapport/bibfil.bib
+++ b/ProjektRapport/bibfil.bib
@@ -79,6 +79,13 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Urldate = {2017-04-13}}
 
 
+
+@online{WinSock,
+	Title = {WinSock server testprogram},
+	Url = {https://msdn.microsoft.com/en-us/library/windows/desktop/ms737591(v=vs.85).aspx},
+	Urldate = {2017-04-20}}
+
+
 @online{HarmoniskeVideo,
 	Date-Modified = {2017-05-23 00:00:00 +0000},
 	Title = {Harmonics - Youtube},
