Rapport læst igennem og smårettelser rettet + lidt dokumentation

--- a/ProjektDokumentation/bibfil.bib
+++ b/ProjektDokumentation/bibfil.bib
@@ -66,3 +66,7 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Url = {https://www.arduino.cc/en/reference/ethernet},
 	Urldate = {2017-04-13}}
 
+@online{WinSock,
+	Title = {WinSock server testprogram},
+	Url = {https://msdn.microsoft.com/en-us/library/windows/desktop/ms737591(v=vs.85).aspx},
+	Urldate = {2017-04-20}}
