--- a/ProjektRapport/sektioner/Belastning.tex
+++ b/ProjektRapport/sektioner/Belastning.tex
@@ -6,7 +6,7 @@ Til simulering af forbrugere i systemet er ohmske belastninger benyttet. Modstan
 
 \subsection{Design og implementering}
 
-I systemet er de førnævnte belastninger placeret i parallelforbindelse, og til hver belastning hører en kontakt, der giver mulighed for nemt at til- og frakoble forskellige belastninger. I serie med hver belastning sidder en 1 $\Omega$ modstand for at kunne tilkoble en Måleenhed til overvågning. Det færdige print med belastninger ses på figur \ref{fig:Belastning}. Nederst til venstre på printet ses pin, der kobles til Distributionslinjen. Øverst til venstre ses bananstik, der kobles til 0V på trintransformeren. 
+I systemet er de førnævnte belastninger placeret i parallelforbindelse, og til hver belastning hører en kontakt, der giver mulighed for nemt at til- og frakoble forskellige belastninger. I serie med hver belastning sidder en 1 $\Omega$ modstand for at kunne tilkoble en Måleenhed til overvågning. Det færdige print med belastninger ses på figur \ref{fig:Belastning}. Nederst til venstre på printet ses den pin, der kobles til Distributionslinjen. Øverst til venstre ses bananstik, der kobles til 0V på trintransformeren. 
 
 \begin{figure}[H]
 	\centering
