--- a/ProjektRapport/sektioner/Krav.tex
+++ b/ProjektRapport/sektioner/Krav.tex
@@ -8,5 +8,5 @@ Spændingsregulatoren skal være i stand til at analysere forholdene på distrib
 
 Spændingsreguleringen laves med en trintransformer, hvor der med en styringsenhed kan skiftes mellem trinene. Styringsenheden kan automatisk regulere spændingen jf. data fra måleenhederne, eller den kan styres manuelt på en grafisk brugergrænseflade. 
 
-Systemet der er udviklet i dette projekt er proof of concept, så spændingsniveauet er skalleret ned.  Der er designet et simuleringskredsløb i form af en distributionslinje og en række forbrugere, for at vise funktionaliteten af Spændingsregulatoren. Forbrugerene  kan kobles til/fra nettet, for at generere et spændingsfald der giver anledning til en regulering af trintransformeren. 
+Systemet der er udviklet i dette projekt er proof of concept, så spændingsniveauet er skaleret ned.  Der er designet et simuleringskredsløb i form af en distributionslinje og en række forbrugere, for at vise funktionaliteten af Spændingsregulatoren. Forbrugerene  kan kobles til/fra nettet, for at generere et spændingsfald der giver anledning til en regulering af trintransformeren. 
 
