--- a/ProjektRapport/sektioner/Maaleenhed/Foranalyse.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Foranalyse.tex
@@ -13,9 +13,9 @@ Det var først tænkt at købe nogle sensorer til PLC'en der kunne måle de øns
 	\label{fig:MaalForanalyse}
 \end{figure}
 
-\section{Signal behandling}
+\section{Signalbehandling}
 
-Iht. Shannons samplings teori\cite{Shannon}, kan der ses et reelt billede af et signal, når samplings frekvensen er dobbelt så stor som selve signalet. Da systemet er proof of concept, er det besluttet kun at aflæse på de fire første harmoniske til 50Hz signalet. Det vil sige at der undersøges, hvor meget energi der er i frekvenserne 100, 150, 200 og 250Hz. Det betyder at der minimum skal samples med 500Hz i projektet.
+Iht. Shannons samplingsteori\cite{Shannon}, kan der ses et reelt billede af et signal, når samplingsfrekvensen er dobbelt så stor som selve signalet. Da systemet er proof of concept, er det besluttet kun at aflæse på de fire første harmoniske til 50Hz signalet. Det vil sige at der undersøges, hvor meget energi der er i frekvenserne 100, 150, 200 og 250Hz. Det betyder at der minimum skal samples med 500Hz i projektet.
 
-Når et signal er samplet til det digitale spektrum, kan signalet analyseres. Til at undersøge signalernes størrelse, power faktor og indhold af harmoniske kan Fourier anvendes. Ved at lave Fourier på en række samplede værdier, fås en ny række komplekse tal. Hvert kompleks tal, angiver værdien for en bestemt frekvens i et signal, der kaldes for frekvens bins. Ud fra denne komplekse værdi kan størrelsen og fasevinklen ved bestemte frekvenser findes. Det anvendes i projektet til at beregne rms værdier af spænding og strøm for 50Hz, men også vinklen mellem spænding og strøm der giver udtryk for power faktoren. Derudover kan signalet også undersøges i højere frekvenser så indhold af harmoniske kan udregnes.  
+Når et signal er samplet til det digitale spektrum, kan signalet analyseres. Til at undersøge signalernes størrelse, power factor og indhold af harmoniske kan Fourier anvendes. Ved at lave Fourier på en række samplede værdier, fås en ny række komplekse tal. Hvert kompleks tal, angiver værdien for en bestemt frekvens i et signal, der kaldes for frekvens bins. Ud fra denne komplekse værdi kan størrelsen og fasevinklen ved bestemte frekvenser findes. Det anvendes i projektet til at beregne rms værdier af spænding og strøm for 50Hz, men også vinklen mellem spænding og strøm der giver udtryk for power factoren. Derudover kan signalet også undersøges i højere frekvenser så indholdet af harmoniske kan udregnes.  
 
