--- a/ProjektRapport/sektioner/Maaleenhed/UARTogTHD.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/UARTogTHD.tex
@@ -1,14 +1,14 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-\subsubsection{Beregnings funktioner}
+\subsubsection{Beregningsfunktioner}
 For at beregne de ønskede værdier er der lavet en række funktioner der kan beregne disse. Disse funktioner er kort beskrevet herunder. Yderlig information findes i dokumentation\footnote{Projektdokumentation, 9.2.4, Beregning af rms og power faktor}
 
 \textbf{Rms:}
-Funktionen modtager et array af absolutte værdier for et signal og beregner rms værdien, ved den frekvens bin der passer til 50Hz.
+Funktionen modtager et array af absolutte værdier for et signal og beregner rms værdien, ved den frekvensbin der passer til 50Hz.
 
 \textbf{Power faktor:}
-Funktionen beregner vinklen for strøm og spænding for derefter at beregne power faktor ved at tage cosinus til vinkel differencen. Funktionen tager ikke højde for om strømmen er leading eller lagging.
+Funktionen beregner vinklen for strøm og spænding for derefter at beregne power factor ved at tage cosinus til vinkel differencen. Funktionen tager ikke højde for om strømmen er leading eller lagging.
 
 \textbf{THD:}
 Beregningen af, og baggrunden for THD, er beskrevet i Afsnit \ref{sec:THD}. Den beregning der laves i PSoC, medregner kun indholdet af de fire første harmoniske i signalet. Formlen der anvendes i softwaren er givet i Ligning \ref{eq:THDsoft}.
