--- a/ProjektRapport/sektioner/Styringsenhed/Test.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Test.tex
@@ -5,13 +5,12 @@
 
 I dette afsnit vil der ikke blive gået i dybden med de enkelte tests, men derimod selve testprocessen og tankerne gjort i testfasen. For at se mere om de enkelte udførte test, se dokumentationen\footnote{Projektdokumentation, 10.4, Modultest}.
 
-Da Styringsenheden generelt har indeholdt meget programmering, har det været oplagt at teste funktionaliteten af koden på nogle enheder på andre allerede udviklede og testede moduler i projektet.  Eksempelvis er funktionaliteten af Brugergrænsefladen testet med brug af andre allerede testede moduler. Til testen af Brugergrænsefladen er kommunikationen fra Måleenhed til Kommunikationsmodul og videre til Kontrolmodulet brugt for at genere tilfældige data, der så blev sendt til og udskrevet på HMI'en fra Kontrolmodulet. Det samme gælder testen af Arduinoens TCP modtagefunktion. Her er PLC'en benyttet  med et testprogram, der kan sende 'req1' kommandoen. Da man allerede har testet PLC'ens forbindelse på et andet Winsock testprogram, kan testen fokusere på Arduinoen. Herunder ses et enkelt testeksempel, hvor dette test program har været benyttet, se figur \ref{fig:EthernetTest}. For hele testbeskrivelsen refereres til dokumentationen\footnote{Projektdokumentation, 10.4.1, Kontrolmodul}.
+Da Styringsenheden generelt har indeholdt meget programmering, har det været oplagt at teste funktionaliteten af koden på nogle enheder på andre allerede udviklede og testede moduler i projektet.  Eksempelvis er funktionaliteten af Brugergrænsefladen testet med brug af andre allerede testede moduler. Til testen af Brugergrænsefladen er kommunikationen fra Måleenhed til Kommunikationsmodul og videre til Kontrolmodulet brugt for at genere tilfældige data, der så blev sendt til og udskrevet på HMI'en fra Kontrolmodulet. Det samme gælder testen af Arduinoens TCP modtagefunktion. Her er PLC'en benyttet  med et testprogram, der kan sende 'req1' kommandoen. Da man allerede har testet PLC'ens forbindelse på et andet WinSock testprogram\cite{WinSock}, kan testen fokusere på Arduinoen. Herunder ses et enkelt testeksempel, hvor PLC testprogrammet har været benyttet, se figur \ref{fig:EthernetTest}. For hele testbeskrivelsen refereres til dokumentationen\footnote{Projektdokumentation, 10.4.1, Kontrolmodul}.
 
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
 	\includegraphics[width=0.85\textwidth]{figure/EthernetTest}
-	\caption{Test af Arduinoens TCP data modtagelse}
+	\caption{Test af Arduinoens TCP datamodtagelse}
 	\label{fig:EthernetTest}
 \end{figure}
-
